...
data class MeditationDrawerStrings(
  val meditate: String,
  val interval: String,
  val settings: String,
  val version: String,
  val start: String,
  val meditation: String,
  val meditating: String,
  val mediationComplete: String,
  val okay: String,
  val cancel: String,
  val minutes: String
)
...

data class MeditationUiState(
  val sound: Boolean = true,
  val intervalSound: Boolean = true,
  val strings: MeditationDrawerStrings = MeditationDrawerStrings(
    meditate = "Meditate",
    interval = "1 min interval sound",
    settings = "Settings",
    version = "Version: 1.0.3 (build 156)",
    start = "Start",
    meditation = "meditation",
    meditating = "Meditating...",
    mediationComplete = "Meditation complete!",
    okay = "Okay",
    cancel = "Cancel",
    minutes = "Minutes"
  ),
  val durationMinutes: String = "20",
  val timeLeft: String = "00:00",
  val progress: MeditationProgress = MeditationProgress.PREPARING
)

abstract class MeditationViewModel: ViewModel()
{
    private val _uiState = MutableStateFlow(MeditationUiState())
...
    Scaffold(
      topBar = {
          TopAppBar(
            title = { Text(i18n(S.Meditate)) },
            navigationIcon = {
                IconButton(onClick = { openDrawer() }) {
                    Icon(Icons.Default.Menu, "Open menu")
                }
            }
          )
      }
    ) { padding ->
        Box(
...
